force-app/main/default/objects/Attendees__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>write Company</description>
    <inlineHelpText>Please write company</inlineHelpText>
    <label>Company Name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>