force-app/main/default/objects/Attendees__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Write Email</description>
    <inlineHelpText>Please write email</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>