force-app/main/default/objects/Attendees__c/fields/Location_Address_Book__c.field-meta.xml
<CustomField>
    <fullName>Location_Address_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location (Address Book)</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>